# di

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml
di/: __init__.py
docs/: tutorial.md
examples/: cyclic.py  factory.py  integration.py  named.py  optional.py  property.py  scoped.py  services.py  singleton.py
injex/: __init__.py
tests/: test_container.py
