[project]
name = "injex"
version = "0.1.1"
authors = [{name = "vshulcz", email = "vshulcz@gmail.com"}]
description = "DI container for Python applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.poetry.urls]
homepage = "https://github.com/vshulcz/injex"