[project]
name = "injex"
version = "1.0.0"
authors = [{name = "vshulcz", email = "vshulcz@gmail.com"}]
description = "DI container for Python applications"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["dependency", "injection", "di", "container", "ddd"]
dependencies = []

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[project.urls]
"Homepage" = "https://github.com/vshulcz/injex"
